--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -7,13 +7,18 @@
 <body>
 <h1>로그인</h1>
 <form th:action="@{/member/login}" method="post">
+    <div th:if="${param.error}">
+        <div>
+            ID 또는 비밀번호를 확인해 주세요.
+        </div>
+    </div>
     <label for="username">아이디</label>
     <input type="text" id="username" name="username">
+
     <label for="password">비밀번호</label>
     <input type="password" id="password" name="password">
 
     <button type="submit">로그인</button>
-
 </form>
 <a th:href="@{/member/findUsername}">아이디 찾기</a>
 <a th:href="@{/member/findPassword}">비밀번호 찾기</a>
