FIND_USERNAME_ENHANCEMENT

--- a/src/main/resources/templates/mainhome.html
+++ b/src/main/resources/templates/mainhome.html
@@ -739,7 +739,7 @@
                 <div class="col-md-5 col-sm-12">
                     <form class="subscription-form validate">
                         <div class="input-group flex-wrap">
-                            <input class="form-control btn-rounded-none" type="email" name="EMAIL" placeholder="Your email address here" required="">
+                            <input class="form-control btn-rounded-none" type="email1" name="EMAIL" placeholder="Your email1 address here" required="">
                             <button class="btn btn-medium btn-primary text-uppercase btn-rounded-none" type="submit" name="subscribe">Subscribe</button>
                         </div>
                     </form>
