--- a/src/main/resources/templates/member/registerForm.html
+++ b/src/main/resources/templates/member/registerForm.html
@@ -1,18 +1,12 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+
 <h1>회원 가입</h1>
 <form th:action="@{/member/register}" th:object="${memberForm}" method="post">
     <label for="username">아이디</label>
     <input type="text"  th:field="*{username}">
     <label for="nickname">닉네임</label>
     <input type="text"  th:field="*{nickname}">
-    <label for="email">이메일</label>
-    <input type="email"  th:field="*{email}">
+    <label for="email1">이메일</label>
+    <input type="email1"  th:field="*{email1}">
     <label for="password1">비밀번호</label>
     <input type="password"  th:field="*{password1}">
     <label for="password2">비밀번호 확인</label>
@@ -20,5 +14,3 @@
 
     <button type="submit">회원가입</button>
 </form>
-</body>
-</html>
