--- a/src/main/resources/templates/member/confirmCodePasswordForm.html
+++ b/src/main/resources/templates/member/confirmCodePasswordForm.html
@@ -1,6 +1,6 @@
 <h2>코드 입력</h2>
-<h3>코드를 입력하고 확인 버튼을 누르면 이메일로 아이디가 전송됩니다.</h3>
-<form th:action="@{/member/confirmCodeUsername}" th:object="${confirmCodeForm}" method="post">
+<h3>코드를 입력하고 확인 버튼을 누르면 이메일로 임시 비밀번호가 전송됩니다.</h3>
+<form th:action="@{/member/confirmCodePassword}" th:object="${confirmCodeForm}" method="post">
     <label for="confirmCode">이메일로 발송된 코드 입력</label>
     <input type="password" id="confirmCode" name="confirmCode">
 
