--- a/src/main/resources/templates/book_create_form.html
+++ b/src/main/resources/templates/book_create_form.html
@@ -1,5 +1,5 @@
-<h5 class="my-3 border-bottom pb-2">질문등록</h5>
-<form th:action="@{/book/create}" method="post">
+<h5 class="my-3 border-bottom pb-2">도서등록</h5>
+<form th:action="@{/book/create}" th:object="${bookForm}" method="post">
     <div class="mb-3">
         <label for="subject" class="form-label">제목</label>
         <input type="text" name="subject" id="subject" class="form-control">
