findUsernameForm.html_fixing

--- a/src/main/resources/static/css/member/findUsernameForm.css
+++ b/src/main/resources/static/css/member/findUsernameForm.css
@@ -3,26 +3,26 @@ body {
   height: 100%;
 }
 
-.form-signin {
+.form-findUser {
   max-width: 330px;
   padding: 1rem;
 }
 
-.form-signin .form-floating:focus-within {
+.form-findUser .form-floating:focus-within {
   z-index: 2;
 }
 
-.form-signin input[type="email"] {
+.form-findUser input[type="email"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 
-.form-signin input[type="password"] {
+.form-findUser input[type="password"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
-.form-signin .form-floating {
+.form-findUser .form-floating {
   margin-bottom: 5px;
 }
