--- a/src/main/resources/static/css/member/registerForm.css
+++ b/src/main/resources/static/css/member/registerForm.css
@@ -1,7 +1,28 @@
-.body {
-    display: flex;
+html,
+body {
+  height: 100%;
 }
-.container {
-    max-width: 1920px;
-    justify-content: center;
+
+.form-register {
+  max-width: 500px;
+  padding: 1rem;
+}
+
+.form-register .form-floating:focus-within {
+  z-index: 2;
+}
+
+.form-register input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-register input[type="password"] {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.form-register .form-floating {
+  padding-bottom: 5px;
 }
