--- a/src/main/resources/templates/member/findUsernameForm.html
+++ b/src/main/resources/templates/member/findUsernameForm.html
@@ -7,11 +7,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/css/member/loginForm.css">
+    <link rel="stylesheet" type="text/css" href="/css/member/findUsernameForm.css">
 </head>
 <body class="d-flex align-items-center py-4 bg-body-tertiary">
-<main class="form-signin w-100 m-auto">
-    <form th:action="@{/member/login}" method="post">
+<main class="form-findUser w-100 m-auto">
+    <form th:action="@{/member/sendConfirmCode}" th:object="${findUsernameForm}" method="post">
         <a th:href="@{/}">
             <svg width="250" height="60" xmlns="http://www.w3.org/2000/svg" version="1.0" preserveAspectRatio="xMidYMid meet">
                 <g>
@@ -29,27 +29,19 @@
                 </g>
             </svg>
         </a>
-        <h1 class="h3 mb-3 fw-normal">로그인</h1>
+        <h1 class="h3 mb-3 fw-normal">아이디 찾기</h1>
+        <h2 class="h5 mb-3 fw-normal">이메일을 입력해주세요</h2>
+        <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
+            <div th:each="err : ${#fields.allErrors()}" th:text="${err}" />
+        </div>
+        <div class="form-floating">
+            <input type="email" id="toEmail" name="toEmail" class="form-control">
+            <label for="email" class="floatingInput">이메일</label>
+        </div>
 
-        <div class="form-floating">
-            <input type="text" id="username" name="username" class="form-control">
-            <label for="username" class="floatingInput">아이디</label>
-        </div>
-        <div class="form-floating">
-            <input type="password" id="password" name="password" class="form-control">
-            <label for="password" class="floatingPassword">비밀번호</label>
-        </div>
-        <button type="submit" class="btn btn-primary w-100 py-2">로그인</button>
+        <button type="submit" class="btn btn-primary w-100 py-2">코드 발송</button>
     </form>
     <br/>
 </main>
 </body>
 </html>
-
-<h2>아이디 찾기</h2>
-<form th:action="@{/member/sendConfirmCode}" th:object="${findUsernameForm}" method="post">
-    <label for="toEmail">회원 가입시 작성한 이메일 입력</label>
-    <input type="email" id="toEmail" name="toEmail">
-
-    <button type="submit">코드 발송</button>
-</form>
