--- a/src/main/resources/templates/foreign_books.html
+++ b/src/main/resources/templates/foreign_books.html
@@ -50,16 +50,16 @@
 </table>
 
 <!-- 캐러셀 추가 -->
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&amp;fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FIH7pg%2FbtqGH1ZgBXx%2Ft8KhtXCPoKDM1ZKljOv270%2Fimg.jpg" class="d-block w-100" alt="Foreign Book Cover">
+            <img src="https://image.aladin.co.kr/product/33370/4/cover500/e902532530_1.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="https://image.yes24.com/goods/102347474/XL" class="d-block w-100" alt="Foreign Book Cover">
+            <img src="https://image.aladin.co.kr/product/31092/38/cover500/0711282110_1.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="https://contents.kyobobook.co.kr/sih/fit-in/458x0/pdt/9791140703210.jpg" class="d-block w-100" alt="Foreign Book Cover">
+            <img src="https://image.aladin.co.kr/product/32892/38/cover500/8901276534_2.jpg" class="d-block w-100" alt="...">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -78,8 +78,14 @@
 </div>
 
 <!-- Bootstrap Bundle with Popper -->
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 <script>
+
+    // 캐러셀을 자바스크립트로 초기화
+    var myCarousel = document.querySelector('#carouselExampleSlidesOnly');
+    var carousel = new bootstrap.Carousel(myCarousel);
+
+
+
     // 별점을 동적으로 변경하는 JavaScript 코드
     function setStarRating(event) {
         var starElement = document.getElementById("starRating");
