apply_entity_controller_service_repository_enhancement

--- a/src/main/resources/templates/mainhome.html
+++ b/src/main/resources/templates/mainhome.html
@@ -835,6 +835,9 @@
                                 <li class="menu-item pb-2">
                                     <a href="#">자주 묻는 질문</a>
                                 </li>
+                                <li class="menu-item pb-2">
+                                    <a th:href="@{/apply/seller}">판매자 신청하기</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
