--- a/src/main/resources/templates/mainhome.html
+++ b/src/main/resources/templates/mainhome.html
@@ -213,6 +213,11 @@
                                 <li>
                                     <a href="contact.html" class="dropdown-item">정산 리스트</a>
                                 </li>
+                                <th:block sec:authorize="hasRole('ADMIN')">
+                                <li>
+                                    <a th:href="@{/apply/list}" class="dropdown-item">판매자 신청 리스트</a>
+                                </li>
+                                </th:block>
                             </ul>
                         </li>
                         <li class="nav-item">
