--- a/src/main/resources/templates/apply/applyList.html
+++ b/src/main/resources/templates/apply/applyList.html
@@ -1,22 +1,10 @@
 <html layout:decorate="~{layout}">
+<head>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/style.css">
+</head>
+<body></body>
 <div layout:fragment="content" class="container my-3">
-    <table class="table">
-        <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-        </tr>
-        </tbody>
-    </table>
+    <h1>testing</h1>
 </div>
 </html>
