--- a/src/main/resources/templates/mainhome.html
+++ b/src/main/resources/templates/mainhome.html
@@ -213,6 +213,7 @@
                                 <li>
                                     <a href="contact.html" class="dropdown-item">정산 리스트</a>
                                 </li>
+                                <!-- admin 에게만 표시 -->
                                 <th:block sec:authorize="hasRole('ADMIN')">
                                 <li>
                                     <a th:href="@{/apply/list}" class="dropdown-item">판매자 신청 리스트</a>
