--- a/src/main/resources/templates/apply/applyList.html
+++ b/src/main/resources/templates/apply/applyList.html
@@ -1,10 +1,38 @@
 <html layout:decorate="~{layout}">
 <head>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/apply/applyList.css">
 </head>
-<body></body>
-<div layout:fragment="content" class="container my-3">
-    <h1>testing</h1>
+<div layout:fragment="content">
+    <div class="main-container">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="head-box">
+            <h2>판매자 신청 리스트</h2>
+        </div>
+        <div class="body-box">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First</th>
+                    <th scope="col">Last</th>
+                    <th scope="col">Handle</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
+
 </html>
