--- a/src/main/resources/templates/mainhome.html
+++ b/src/main/resources/templates/mainhome.html
@@ -128,7 +128,7 @@
     </div>
 </div>
 
-<header id="header" class="site-header header-scrolled position-fixed text-black bg-light">
+<header id="header" class="site-header header-scrolled text-black bg-light">
     <nav id="header-nav" class="navbar navbar-expand-lg px-3 mb-3">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
