--- a/src/main/resources/templates/foreign_books.html
+++ b/src/main/resources/templates/foreign_books.html
@@ -3,17 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foreign Books</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <title>가운데 정렬된 수평선</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-        .rate {
-            background: url(https://aldo814.github.io/jobcloud/html/images/user/star_bg02.png) no-repeat;
-            width: 121px;
-            height: 20px;
-            position: relative;
-            cursor: pointer; /* 마우스 커서를 손가락 모양으로 변경 */
-        }
+        .horizontal-line-container {
+        display: flex; /* Flexbox 사용 */
+        align-items: center; /* 수직 가운데 정렬 */
+        margin-top: 20px; /* 위쪽 여백 추가 */
+    }
+    .horizontal-line {
+        flex-grow: 1; /* 남은 공간을 채우도록 함 */
+        border-top: 1px solid black; /* 수평선 스타일 설정 */
+    }
+    .Ere_bo_title {
+        flex-grow: 0; /* 내용 크기에 맞춤 */
+        margin-right: 10px; /* 제목과 수평선 사이 여백 추가 */
+    }
+        .item-container {
+    display: flex; /* Flexbox 사용 */
+    margin-bottom: 10px; /* 추가 */
+}
+
+.item-container img {
+    margin-right: 20px; /* 사진과 텍스트 사이의 간격 조정 */
+    width: 100px; /* 사진 크기 수정 */
+    height: auto; /* 이미지 비율 유지 */
+}
+
+
+
+.rate {
+    background: url(https://aldo814.github.io/jobcloud/html/images/user/star_bg02.png) no-repeat;
+    width: 121px;
+    height: 20px;
+    position: relative;
+    cursor: pointer; /* 마우스 커서를 손가락 모양으로 변경 */
+    margin-top: 10px; /* 수정 */
+}
 
         .rate span {
             position: absolute;
@@ -22,63 +48,101 @@
             height: 20px;
             pointer-events: none; /* 이벤트를 통과시킴으로써 별점을 클릭할 수 있게 함 */
         }
+        .dropdown {  /* 드롭박스 색깔 */
+            position: relative;
+            display: inline-block;
+        }
+        .dropdown .btn {
+            background-color: #4CAF50; /* Green background */
+            color: white; /* White text */
+            padding: 10px; /* Some padding */
+            font-size: 16px; /* Increased font size */
+            border: none; /* Remove the default border */
+            cursor: pointer; /* Pointer cursor on hover */
+        }
+        .dropdown .dropdown-menu {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+            z-index: 1;
+        }
+        .dropdown .dropdown-menu a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+        .dropdown .dropdown-menu a:hover {
+            background-color: #f1f1f1;
+        }
     </style>
 </head>
 <body>
-<h1>Foreign Books</h1>
-
-<table class="table">
-    <thead>
-    <tr>
-        <th>Column 1</th>
-        <th>Column 2</th>
-        <!-- 필요한 만큼의 테이블 헤더 열을 추가할 수 있습니다. -->
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>Data 1</td>
-        <td>Data 2</td>
-        <!-- 필요한 만큼의 테이블 데이터 열을 추가할 수 있습니다. -->
-    </tr>
-    <!-- 수평선 추가 -->
-    <tr>
-        <td colspan="2"><hr></td>
-    </tr>
-    <!-- 수평선 추가를 통해 각 행 사이에 선이 보여집니다. -->
-    </tbody>
-</table>
-
-<!-- 캐러셀 추가 -->
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&amp;fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FIH7pg%2FbtqGH1ZgBXx%2Ft8KhtXCPoKDM1ZKljOv270%2Fimg.jpg" class="d-block w-100" alt="Foreign Book Cover">
-        </div>
-        <div class="carousel-item">
-            <img src="https://image.yes24.com/goods/102347474/XL" class="d-block w-100" alt="Foreign Book Cover">
-        </div>
-        <div class="carousel-item">
-            <img src="https://contents.kyobobook.co.kr/sih/fit-in/458x0/pdt/9791140703210.jpg" class="d-block w-100" alt="Foreign Book Cover">
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <div class="horizontal-line-container">
+                <span class="Ere_bo_title">제목 테스트 </span>
+            </div>
+            <hr class="horizontal-line">
         </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
+    <div class="row">
+        <div class="col-md-3 offset-md-3">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="https://image.aladin.co.kr/product/33370/4/cover500/e902532530_1.jpg" class="d-block w-100" alt="Slide 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://image.aladin.co.kr/product/31092/38/cover500/0711282110_1.jpg" class="d-block w-100" alt="Slide 2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://image.aladin.co.kr/product/32892/38/cover500/8901276534_2.jpg" class="d-block w-100" alt="Slide 3">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div>
+                <div>판매가 10000원</div>
+                <div>할인가 8000원</div>
+            </div>
+            <div style="margin-bottom: 20px;"></div> <!-- 강제로 줄 바꿈+한 칸 공백 -->
+            <div class="rate" onclick="setStarRating(event)">
+                <span id="starRating" style="width: 50%"></span>
+            </div>
+            <div style="margin-bottom: 20px;"></div> <!-- 강제로 줄 바꿈+한 칸 공백 -->
+            <div class="dropdown">
+                <button class="btn" onclick="toggleDropdown()">보관함</button>
+                <ul id="dropdownMenu" class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
 
-<!-- 별점 추가 -->
-<div class="rate" onclick="setStarRating(event)">
-    <span id="starRating" style="width: 50%"></span>
-</div>
 
-<!-- Bootstrap Bundle with Popper -->
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 <script>
     // 별점을 동적으로 변경하는 JavaScript 코드
     function setStarRating(event) {
@@ -87,6 +151,29 @@
         var offsetX = event.clientX - rect.left; // 마우스 클릭한 위치의 X 좌표
         var percent = (offsetX / rect.width) * 100; // 클릭한 위치를 별점으로 변환
         starElement.style.width = percent + "%";
+    }
+
+    function toggleDropdown() {
+        var dropdownMenu = document.getElementById("dropdownMenu");
+        if (dropdownMenu.style.display === "none") {
+            dropdownMenu.style.display = "block";
+        } else {
+            dropdownMenu.style.display = "none";
+        }
+    }
+
+    // 이하 코드는 사용자가 드롭다운 이외의 영역을 클릭할 때 드롭다운을 닫는 기능입니다.
+    window.onclick = function(event) {
+        if (!event.target.matches('.btn')) {
+            var dropdowns = document.getElementsByClassName("dropdown-menu");
+            var i;
+            for (i = 0; i < dropdowns.length; i++) {
+                var openDropdown = dropdowns[i];
+                if (openDropdown.style.display === "block") {
+                    openDropdown.style.display = "none";
+                }
+            }
+        }
     }
 </script>
 </body>
