--- a/src/main/resources/templates/foreign_books.html
+++ b/src/main/resources/templates/foreign_books.html
@@ -7,39 +7,42 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         .horizontal-line-container {
-        display: flex; /* Flexbox 사용 */
-        align-items: center; /* 수직 가운데 정렬 */
-        margin-top: 20px; /* 위쪽 여백 추가 */
-    }
-    .horizontal-line {
-        flex-grow: 1; /* 남은 공간을 채우도록 함 */
-        border-top: 1px solid black; /* 수평선 스타일 설정 */
-    }
-    .Ere_bo_title {
-        flex-grow: 0; /* 내용 크기에 맞춤 */
-        margin-right: 10px; /* 제목과 수평선 사이 여백 추가 */
-    }
+            display: flex; /* Flexbox 사용 */
+
+            margin-top: 20px; /* 위쪽 여백 추가 */
+            width: 1000px; /* 원하는 가로 너비로 조절 */
+        }
+
+        .horizontal-line {
+            flex-grow: 1;
+            border-top: 2px solid black; /* 너비를 4픽셀로 변경 */
+            width: 100px;
+        }
+
+        .Ere_bo_title {
+            flex-grow: 0; /* 내용 크기에 맞춤 */
+            margin-right: 10px; /* 제목과 수평선 사이 여백 추가 */
+        }
+
         .item-container {
-    display: flex; /* Flexbox 사용 */
-    margin-bottom: 10px; /* 추가 */
-}
+            display: flex; /* Flexbox 사용 */
+            margin-bottom: 10px; /* 추가 */
+        }
 
-.item-container img {
-    margin-right: 20px; /* 사진과 텍스트 사이의 간격 조정 */
-    width: 100px; /* 사진 크기 수정 */
-    height: auto; /* 이미지 비율 유지 */
-}
+        .item-container img {
+            margin-right: 20px; /* 사진과 텍스트 사이의 간격 조정 */
+            width: 100px; /* 사진 크기 수정 */
+            height: auto; /* 이미지 비율 유지 */
+        }
 
-
-
-.rate {
-    background: url(https://aldo814.github.io/jobcloud/html/images/user/star_bg02.png) no-repeat;
-    width: 121px;
-    height: 20px;
-    position: relative;
-    cursor: pointer; /* 마우스 커서를 손가락 모양으로 변경 */
-    margin-top: 10px; /* 수정 */
-}
+        .rate {
+            background: url(https://aldo814.github.io/jobcloud/html/images/user/star_bg02.png) no-repeat;
+            width: 121px;
+            height: 20px;
+            position: relative;
+            cursor: pointer; /* 마우스 커서를 손가락 모양으로 변경 */
+            margin-top: 10px; /* 수정 */
+        }
 
         .rate span {
             position: absolute;
@@ -48,10 +51,12 @@
             height: 20px;
             pointer-events: none; /* 이벤트를 통과시킴으로써 별점을 클릭할 수 있게 함 */
         }
+
         .dropdown {  /* 드롭박스 색깔 */
             position: relative;
             display: inline-block;
         }
+
         .dropdown .btn {
             background-color: #4CAF50; /* Green background */
             color: white; /* White text */
@@ -60,6 +65,7 @@
             border: none; /* Remove the default border */
             cursor: pointer; /* Pointer cursor on hover */
         }
+
         .dropdown .dropdown-menu {
             display: none;
             position: absolute;
@@ -68,12 +74,14 @@
             box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
             z-index: 1;
         }
+
         .dropdown .dropdown-menu a {
             color: black;
             padding: 12px 16px;
             text-decoration: none;
             display: block;
         }
+
         .dropdown .dropdown-menu a:hover {
             background-color: #f1f1f1;
         }
@@ -82,15 +90,16 @@
 <body>
 <div class="container">
     <div class="row">
-        <div class="col-md-6 offset-md-3">
+
+        <div class="col-md-6 offset-md-1">
             <div class="horizontal-line-container">
                 <span class="Ere_bo_title">제목 테스트 </span>
             </div>
-            <hr class="horizontal-line">
+            <hr class="horizontal-line" style="width: 150%">
         </div>
     </div>
     <div class="row">
-        <div class="col-md-3 offset-md-3">
+        <div class="col-md-3 offset-md-2">
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -123,6 +132,8 @@
                 <span id="starRating" style="width: 50%"></span>
             </div>
             <div style="margin-bottom: 20px;"></div> <!-- 강제로 줄 바꿈+한 칸 공백 -->
+            <a th:href="@{/question/create}" class="btn btn-primary">장바구니</a>
+            <a th:href="@{/question/create}" class="btn btn-primary">구매하기</a>
             <div class="dropdown">
                 <button class="btn" onclick="toggleDropdown()">보관함</button>
                 <ul id="dropdownMenu" class="dropdown-menu">
@@ -133,12 +144,25 @@
             </div>
         </div>
     </div>
+    <div class="col-md-6 offset-md-1">
+    <hr class="horizontal-line" style="width: 150%"> <!-- 기존의 수평선 -->
+        <div>책 내용</div>
+        <div style="margin-bottom: 20px;"></div> <!-- 강제로 줄 바꿈+한 칸 공백 -->
+        <div>역사언어학 분야 대한민국 최다 구독자를 보유한 언어 천재 유튜버 향문천이 들려주는 놀라운 한국어의 역사!
+            “한국어는 신라어의 후예일까?” “일본어는 백제어의 후예일까?” “과거로 돌아가면 말이 통할까?”
+            “조선 시대에는 외국어를 어떻게 공부했을까?” “韓은 어떻게 우리 민족의 자칭이 되었을까?”
+            “과거 외국인들은 우리나라를 어떻게 불렀을까?” “근대 시기 서양의 단어들은 어떻게 번역되었을까?”
+            한국어의 기원에서부터 근대 이후에 이르기까지, 미처 몰랐던 역사적 사실부터 흥미진진한 TMI까지, 한국어사의 크고 작은 순간들을 유쾌하고 거침없이 풀어낸 인문 교양서.</div>
+    <hr class="horizontal-line" style="width: 100%"> <!-- 새로운 수평선 추가, 길이 조정 -->
+        <div style="margin-bottom: 20px;"></div> <!-- 강제로 줄 바꿈+한 칸 공백 -->
+        <div>책 저자</div>
+        <div style="margin-bottom: 20px;"></div> <!-- 강제로 줄 바꿈+한 칸 공백 -->
+        <div>책 부록</div>
 </div>
-
-
-
-
-
+</div>
+<div>책제목</div>
+<div style="margin-bottom: 20px;"></div> <!-- 강제로 줄 바꿈+한 칸 공백 -->
+<div>글쓴이</div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
