--- a/src/main/resources/templates/mainhome.html
+++ b/src/main/resources/templates/mainhome.html
@@ -19,6 +19,7 @@
     <!-- script
     ================================================== -->
     <script src="js/modernizr.js"></script>
+    <script src="/js/kakaoButton.js"></script>
 </head>
 <body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -844,6 +845,15 @@
                                 <li class="menu-item pb-2">
                                     <a th:href="@{/apply/seller}">판매자 신청하기</a>
                                 </li>
+                                <div
+                                        id="kakao-talk-channel-chat-button"
+                                        data-channel-public-id="_xnuxbaG"
+                                        data-title="consult"
+                                        data-size="small"
+                                        data-color="mono"
+                                        data-shape="pc"
+                                        data-support-multiple-densities="true"
+                                ></div>
                             </ul>
                         </div>
                     </div>
