--- a/src/main/resources/static/css/apply/applyList.css
+++ b/src/main/resources/static/css/apply/applyList.css
@@ -1,3 +1,14 @@
- .main-container {
-    max-width: 1000px;
+.container {
+     display: flex;
+     justify-content: center;
+ }
+.main-container {
+    max-width: 1300px;
+}
+.main-container > .head-box {
+    display: flex;
+    justify-content: center;
+}
+.sellerIntroduce {
+    max-width: 600px;
 }
