--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -21,7 +21,7 @@
     <!-- script
     ================================================== -->
     <script src="/js/modernizr.js"></script>
-
+    <script src="/js/kakaoButton.js"></script>
 </head>
 <body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true"
       tabindex="0">
@@ -387,6 +387,18 @@
                                 <li class="menu-item pb-2">
                                     <a href="#">자주 묻는 질문</a>
                                 </li>
+                                <li class="menu-item pb-2">
+                                    <a th:href="@{/apply/seller}">판매자 신청하기</a>
+                                </li>
+                                <div
+                                        id="kakao-talk-channel-chat-button"
+                                        data-channel-public-id="_xnuxbaG"
+                                        data-title="consult"
+                                        data-size="small"
+                                        data-color="mono"
+                                        data-shape="pc"
+                                        data-support-multiple-densities="true"
+                                ></div>
                             </ul>
                         </div>
                     </div>
