--- a/src/main/resources/templates/book/books.html
+++ b/src/main/resources/templates/book/books.html
@@ -92,7 +92,6 @@
 <!-- 홈 카테고리에 대한 컨텐츠 -->
 <div id="homeTabContent" class="category-content active">
     <h2>홈 카테고리</h2>
-    <p>홈 카테고리에 대한 내용이 여기에 나오도록 할 수 있습니다.</p>
     <hr> <!-- 수평선 추가 -->
     <div>책제목</div>
     <div style="margin-bottom: 20px;"></div> <!-- 강제로 줄 바꿈+한 칸 공백 -->
@@ -141,7 +140,6 @@
 
 <div id="homeTabKoreaContent" class="category-content">
     <h2>국내도서 카테고리</h2>
-    <p>전체보기 카테고리에 대한 내용이 여기에 나오도록 할 수 있습니다.</p>
     <hr> <!-- 수평선 추가 -->
     <div class="image-gallery">
         <div class="gallery-item">
@@ -199,20 +197,20 @@
             </div>
         </div>
         <div class="gallery-item">
-            <a href="http://localhost:8010/category/korea2">
-                <img src="https://image.aladin.co.kr/product/33156/38/cover500/8962625938_1.jpg" alt="Image 2">
+            <a href="http://localhost:8010/category/best2">
+                <img src="https://image.aladin.co.kr/product/32648/45/cover500/k072935654_1.jpg" alt="Image 2">
             </a>
             <div class="gallery-text">
-                <div>책제목 뉴럴 링크 - 21세기를 이끄는 거대한 연결, 뇌-컴퓨터 인터페이스</div>
+                <div>남에게 보여주려고 인생을 낭비하지 마라</div>
                 <div>글쓴이</div>
             </div>
         </div>
         <div class="gallery-item">
-            <a href="http://localhost:8010/category/korea3">
-                <img src="https://image.aladin.co.kr/product/33489/27/cover500/8958640421_1.jpg" alt="Image 3">
+            <a href="http://localhost:8010/category/best3">
+                <img src="https://image.aladin.co.kr/product/33273/25/cover500/k302938773_2.jpg" alt="Image 3">
             </a>
             <div class="gallery-text">
-                <div>책제목 제주 로드 맛집 - 푸른바다 길 위에서 특별한 미식을 만나다</div>
+                <div>책제목 아이는 무엇으로 자라는가</div>
                 <div>글쓴이</div>
             </div>
         </div>
@@ -222,17 +220,16 @@
 <!-- 신간도서에 대한 컨텐츠 -->
 <div id="homeTabNewContent" class="category-content">
     <!-- 신간도서에 대한 내용 -->
-    <h2>국내도서 카테고리</h2>
-    <p>전체보기 카테고리에 대한 내용이 여기에 나오도록 할 수 있습니다.</p>
+    <h2>신간도서 카테고리</h2>
     <hr> <!-- 수평선 추가 -->
     <div class="image-gallery">
         <div class="gallery-item">
-            <a href="http://localhost:8010/category/korea1">
-                <img src="https://image.aladin.co.kr/product/31559/97/cover500/s102936816_3.jpg" alt="Image 1">
+            <a href="http://localhost:8010/category/new1">
+                <img src="https://image.aladin.co.kr/product/33526/19/cover500/8934916184_1.jpg" alt="Image 1">
             </a>
 
             <div class="gallery-text">
-                <div>책제목  도둑맞은 집중력 - 집중력 위기의 시대, 삶의 주도권을 되찾는 법 </div>
+                <div>책제목  맛있는 이야기 </div>
                 <div>글쓴이</div>
                 <div>소장
                     10%
@@ -241,20 +238,20 @@
             </div>
         </div>
         <div class="gallery-item">
-            <a href="http://localhost:8010/category/korea2">
-                <img src="https://image.aladin.co.kr/product/33156/38/cover500/8962625938_1.jpg" alt="Image 2">
+            <a href="http://localhost:8010/category/new2">
+                <img src="https://image.aladin.co.kr/product/33516/69/cover500/k112938658_1.jpg" alt="Image 2">
             </a>
             <div class="gallery-text">
-                <div>책제목 뉴럴 링크 - 21세기를 이끄는 거대한 연결, 뇌-컴퓨터 인터페이스</div>
+                <div>책제목 각인된 지식</div>
                 <div>글쓴이</div>
             </div>
         </div>
         <div class="gallery-item">
-            <a href="http://localhost:8010/category/korea3">
-                <img src="https://image.aladin.co.kr/product/33489/27/cover500/8958640421_1.jpg" alt="Image 3">
+            <a href="http://localhost:8010/category/new3">
+                <img src="https://image.aladin.co.kr/product/33460/46/cover500/k462938746_1.jpg" alt="Image 3">
             </a>
             <div class="gallery-text">
-                <div>책제목 제주 로드 맛집 - 푸른바다 길 위에서 특별한 미식을 만나다</div>
+                <div>책제목 나무: 삶과 죽음의 이야기</div>
                 <div>글쓴이</div>
             </div>
         </div>
@@ -264,17 +261,16 @@
 <!-- 무료도서에 대한 컨텐츠 -->
 <div id="homeTabFreeContent" class="category-content">
     <!-- 무료도서에 대한 내용 -->
-    <h2>국내도서 카테고리</h2>
-    <p>전체보기 카테고리에 대한 내용이 여기에 나오도록 할 수 있습니다.</p>
+    <h2>무료도서 카테고리</h2>
     <hr> <!-- 수평선 추가 -->
     <div class="image-gallery">
         <div class="gallery-item">
-            <a href="http://localhost:8010/category/korea1">
-                <img src="https://image.aladin.co.kr/product/31559/97/cover500/s102936816_3.jpg" alt="Image 1">
+            <a href="http://localhost:8010/category/free1">
+                <img src="https://image.aladin.co.kr/product/33522/77/cover500/k062939372_1.jpg" alt="Image 1">
             </a>
 
             <div class="gallery-text">
-                <div>책제목  도둑맞은 집중력 - 집중력 위기의 시대, 삶의 주도권을 되찾는 법 </div>
+                <div>책제목  자아폭발</div>
                 <div>글쓴이</div>
                 <div>소장
                     10%
@@ -283,20 +279,20 @@
             </div>
         </div>
         <div class="gallery-item">
-            <a href="http://localhost:8010/category/korea2">
-                <img src="https://image.aladin.co.kr/product/33156/38/cover500/8962625938_1.jpg" alt="Image 2">
+            <a href="http://localhost:8010/category/free2">
+                <img src="https://image.aladin.co.kr/product/33518/77/cover500/k502938654_1.jpg" alt="Image 2">
             </a>
             <div class="gallery-text">
-                <div>책제목 뉴럴 링크 - 21세기를 이끄는 거대한 연결, 뇌-컴퓨터 인터페이스</div>
+                <div>책제목 불복종의 정치학</div>
                 <div>글쓴이</div>
             </div>
         </div>
         <div class="gallery-item">
-            <a href="http://localhost:8010/category/korea3">
-                <img src="https://image.aladin.co.kr/product/33489/27/cover500/8958640421_1.jpg" alt="Image 3">
+            <a href="http://localhost:8010/category/free3">
+                <img src="https://image.aladin.co.kr/product/33518/36/cover500/k942938653_1.jpg" alt="Image 3">
             </a>
             <div class="gallery-text">
-                <div>책제목 제주 로드 맛집 - 푸른바다 길 위에서 특별한 미식을 만나다</div>
+                <div>책제목 대여금고</div>
                 <div>글쓴이</div>
             </div>
         </div>
@@ -304,6 +300,10 @@
 </div>
 
 <script>
+    const hash = window.location.hash // url 해쉬 값 구하기
+    const tab = hash.replace('#', '') // 해쉬 값에서 # 제거
+    showContent(tab) // 페이지 이동
+
     function showContent(tabName) {
         // 모든 카테고리 컨텐츠를 숨김
         var contents = document.querySelectorAll('.category-content');
@@ -324,8 +324,6 @@
         // 클릭한 카테고리 버튼 활성화
         var activeTab = document.querySelector('.category-item a[href="#' + tabName + '"]');
         activeTab.parentElement.classList.add('active');
-    }
-    function showContent(tabName) {
         // 클릭한 카테고리에 해당하는 URL을 정의
         var tabUrls = {
             'homeTab': 'http://localhost:8010/category/list#homeTab',
@@ -338,6 +336,7 @@
 
         // 클릭한 카테고리에 해당하는 URL로 페이지 이동
         window.location.href = tabUrls[tabName];
+    }
 </script>
 
 </body>
