--- a/src/main/resources/templates/mainhome.html
+++ b/src/main/resources/templates/mainhome.html
@@ -368,7 +368,7 @@
             <div class="display-header d-flex justify-content-between pb-3">
                 <h2 class="display-7 text-dark text-uppercase">베스트셀러</h2>
                 <div class="btn-right">
-                    <a href="shop.html" class="btn btn-medium btn-normal text-uppercase">바로가기</a>
+                    <a href="http://localhost:8010/category/list#homeTabBest" class="btn btn-medium btn-normal text-uppercase">바로가기</a>
                 </div>
             </div>
             <div class="swiper product-swiper">
@@ -396,7 +396,9 @@
                     <div class="swiper-slide">
                         <div class="product-card position-relative">
                             <div class="image-holder">
+                                <a href="http://localhost:8010/category/list#homeTabBest">
                                 <img style="width:310px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="product-item" class="img-fluid">
+                                </a>
                             </div>
                             <div class="cart-concern position-absolute">
                                 <div class="cart-button d-flex">
@@ -414,7 +416,9 @@
                     <div class="swiper-slide">
                         <div class="product-card position-relative">
                             <div class="image-holder">
+                                <a href="http://localhost:8010/category/list#homeTabBest">
                                 <img style="width:310px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="product-item" class="img-fluid">
+                                </a>
                             </div>
                             <div class="cart-concern position-absolute">
                                 <div class="cart-button d-flex">
@@ -432,7 +436,9 @@
                     <div class="swiper-slide">
                         <div class="product-card position-relative">
                             <div class="image-holder">
+                                <a href="http://localhost:8010/category/list#homeTabBest">
                                 <img style="width:310px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="product-item" class="img-fluid">
+                                </a>
                             </div>
                             <div class="cart-concern position-absolute">
                                 <div class="cart-button d-flex">
@@ -477,7 +483,7 @@
             <div class="display-header d-flex justify-content-between pb-3">
                 <h2 class="display-7 text-dark text-uppercase">무료 eBook</h2>
                 <div class="btn-right">
-                    <a href="shop.html" class="btn btn-medium btn-normal text-uppercase">바로가기</a>
+                    <a href="http://localhost:8010/category/list#homeTabFree" class="btn btn-medium btn-normal text-uppercase">바로가기</a>
                 </div>
             </div>
             <div class="swiper product-watch-swiper">
@@ -485,7 +491,9 @@
                     <div class="swiper-slide">
                         <div class="product-card position-relative">
                             <div class="image-holder">
+                                <a href="http://localhost:8010/category/list#homeTabFree">
                                 <img style="width:310px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="product-item" class="img-fluid">
+                                </a>
                             </div>
                             <div class="cart-concern position-absolute">
                                 <div class="cart-button d-flex">
@@ -503,7 +511,9 @@
                     <div class="swiper-slide">
                         <div class="product-card position-relative">
                             <div class="image-holder">
+                                <a href="http://localhost:8010/category/list#homeTabFree">
                                 <img style="width:310px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="product-item" class="img-fluid">
+                                </a>
                             </div>
                             <div class="cart-concern position-absolute">
                                 <div class="cart-button d-flex">
@@ -521,7 +531,9 @@
                     <div class="swiper-slide">
                         <div class="product-card position-relative">
                             <div class="image-holder">
+                                <a href="http://localhost:8010/category/list#homeTabFree">
                                 <img style="width:310px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="product-item" class="img-fluid">
+                                </a>
                             </div>
                             <div class="cart-concern position-absolute">
                                 <div class="cart-button d-flex">
@@ -539,7 +551,9 @@
                     <div class="swiper-slide">
                         <div class="product-card position-relative">
                             <div class="image-holder">
+                                <a href="http://localhost:8010/category/list#homeTabFree">
                                 <img style="width:310px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="product-item" class="img-fluid">
+                                </a>
                             </div>
                             <div class="cart-concern position-absolute">
                                 <div class="cart-button d-flex">
@@ -557,7 +571,9 @@
                     <div class="swiper-slide">
                         <div class="product-card position-relative">
                             <div class="image-holder">
+                                <a href="http://localhost:8010/category/list#homeTabFree">
                                 <img style="width:310px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="product-item" class="img-fluid">
+                                </a>
                             </div>
                             <div class="cart-concern position-absolute">
                                 <div class="cart-button d-flex">
@@ -598,14 +614,16 @@
             <div class="display-header d-flex justify-content-between pb-3">
                 <h2 class="display-7 text-dark text-uppercase">새로나온 eBook</h2>
                 <div class="btn-right">
-                    <a href="blog.html" class="btn btn-medium btn-normal text-uppercase">바로 가기</a>
+                    <a href="http://localhost:8010/category/list#homeTabNew" class="btn btn-medium btn-normal text-uppercase">바로 가기</a>
                 </div>
             </div>
             <div class="post-grid d-flex flex-wrap justify-content-between">
                 <div class="col-lg-4 col-sm-12">
                     <div class="card border-none me-3">
                         <div class="card-image">
+                            <a href="http://localhost:8010/category/list#homeTabNew">
                             <img style="width:414px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="" class="img-fluid">
+                            </a>
                         </div>
                     </div>
                     <div class="card-body text-uppercase">
@@ -621,7 +639,9 @@
                 <div class="col-lg-4 col-sm-12">
                     <div class="card border-none me-3">
                         <div class="card-image">
+                            <a href="http://localhost:8010/category/list#homeTabNew">
                             <img style="width:414px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="" class="img-fluid">
+                            </a>
                         </div>
                     </div>
                     <div class="card-body text-uppercase">
@@ -637,7 +657,9 @@
                 <div class="col-lg-4 col-sm-12">
                     <div class="card border-none me-3">
                         <div class="card-image">
+                            <a href="http://localhost:8010/category/list#homeTabNew">
                             <img style="width:414px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="" class="img-fluid">
+                            </a>
                         </div>
                     </div>
                     <div class="card-body text-uppercase">
