--- a/src/main/resources/templates/book/new_books1.html
+++ b/src/main/resources/templates/book/new_books1.html
@@ -94,7 +94,7 @@
 
         <div class="col-md-6 offset-md-2">
             <div class="horizontal-line-container">
-                <span class="Ere_bo_title">도둑맞은 집중력 - 집중력 위기의 시대, 삶의 주도권을 되찾는 법 </span>
+                <span class="Ere_bo_title">맛있는 이야기 </span>
             </div>
             <div style="margin-bottom: 20px;"></div> <!-- 강제로 줄 바꿈+한 칸 공백 -->
             <div class="horizontal-line-container">
@@ -108,10 +108,10 @@
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="https://image.aladin.co.kr/product/31559/97/cover500/s102936816_3.jpg" class="d-block w-100" alt="Slide 1">
+                        <img src="https://image.aladin.co.kr/product/33526/19/cover500/8934916184_1.jpg" class="d-block w-100" alt="Slide 1">
                     </div>
                     <div class="carousel-item">
-                        <img src="https://image.aladin.co.kr/product/31559/97/letslook/K682832859_b.jpg" class="d-block w-100" alt="Slide 2">
+                        <img src="https://image.aladin.co.kr/product/33526/19/letslook/S502938000_b.jpg" class="d-block w-100" alt="Slide 2">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
