--- a/src/main/resources/templates/mainhome.html
+++ b/src/main/resources/templates/mainhome.html
@@ -789,6 +789,9 @@
                     </a>
                 </figure>
             </div>
+            <div class="btn-center">
+                <a th:href="@{/event/list}" class="btn btn-medium btn-normal text-uppercase">이벤트 페이지</a>
+            </div>
         </div>
     </div>
 </section>
