--- a/src/main/resources/templates/event/event_detail.html
+++ b/src/main/resources/templates/event/event_detail.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title> </title>
-</head>
-<body>
-
-</body>
+<html layout:decorate="~{layout}">
+<div layout:fragment="content">
+    디테일 페이지
+</div>
 </html>
