--- a/src/main/resources/templates/event/event_form.html
+++ b/src/main/resources/templates/event/event_form.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
+<html layout:decorate="~{layout}">
+<div layout:fragment="content">
+    이벤트 입력 폼
+</div>
 </html>
